<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.toolbar.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_sort_id"
                android:icon="@drawable/sort_id"
                android:title="@string/sort_by_id"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_sort_first_name"
                android:icon="@drawable/sort_first_name"
                android:title="@string/sort_by_first_name"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_sort_last_name"
                android:icon="@drawable/sort_last_name"
                android:title="@string/sort_by_last_name"
                app:showAsAction="always|withText"/>

        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sign_out"
                android:icon="@drawable/ic_signt_out"
                android:title="@string/sign_out"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>