<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.toolbar.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu"
        android:icon="@drawable/settings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_add_photo"
                android:icon="@drawable/add_photo"
                android:title="@string/add_photo"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_delete_photo"
                android:icon="@drawable/delete_photo"
                android:title="@string/delete_photo"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>