<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/autumn_flavescent_name"
    tools:context=".fragment.AddNewPatientFragment">

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:orientation="horizontal">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:spinnerMode="dialog"
                app:ms_enableFloatingLabel="true"
                app:ms_errorColor="@color/red_error"
                app:ms_hint="@string/patient_dob"/>

            <View
                android:layout_width="@dimen/spinner_vertical_divider_width"
                android:layout_height="@dimen/spinner_vertical_divider_height"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ms_enableFloatingLabel="true"
                app:ms_hint="@string/patient_sex"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:orientation="horizontal">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/race"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ms_enableFloatingLabel="true"
                app:ms_hint="@string/patient_race"/>

            <View
                android:layout_width="@dimen/spinner_vertical_divider_width"
                android:layout_height="@dimen/spinner_vertical_divider_height"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ms_enableFloatingLabel="true"
                app:ms_hint="@string/patient_service"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:orientation="horizontal">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/braceClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ms_enableFloatingLabel="true"
                app:ms_hint="@string/patient_brace_class"/>

            <View
                android:layout_width="@dimen/spinner_vertical_divider_width"
                android:layout_height="@dimen/spinner_vertical_divider_height"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/hyphoKypho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ms_enableFloatingLabel="true"
                app:ms_hint="@string/patient_hypho_kypho"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large">

            <AutoCompleteTextView
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_last_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/cancel"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_cancel"
                    android:background="@color/autumn_yellow_name"
                    android:textColor="@color/red_error"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/add"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_add"
                    android:background="@color/autumn_app_name"
                    android:textColor="@color/autumn_yellow_name"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>